--- a/src/index.css
+++ b/src/index.css
@@ -17,17 +17,15 @@ body {
 }
 
 .container {
+  width: 100%;
   margin: 0 auto;
-  max-width: 1440px;
-  padding: 64px 200px;
+  padding: 120px 176px;
 }
 
 .hero {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
-  padding: 64px;
+  padding: 0 64px;
   border-radius: 36px;
   background: #FFF;
   box-shadow: 0px 15px 60px 0px rgba(0, 0, 0, 0.25);
@@ -37,6 +35,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 24px;
+
   & h1 {
     color: var(--Dark-Navy, #242742);
     font-feature-settings: 'clig' off, 'liga' off;
@@ -113,7 +112,18 @@ body {
   margin-bottom: 13px;
 }
 
-.bgImg {padding: 24px;}
+.bgImg {
+  padding: 24px;
+  width: 400px;
+
+  & .desktop {
+    display: block;
+  }
+
+  & .mobile {
+    display: none;
+  }
+}
 
 .subscribingPage {
   border-radius: 36px;
@@ -172,9 +182,121 @@ body {
   }
 }
 
-@media (width < 375) {
-  .bgImg {
-    display: flex;
+@media (width < 400px) {
+
+  .container {
+    width: 100%;
+    padding: 0 0 20px 0;
+  }
+
+  .hero {
     flex-direction: column-reverse;
+    padding: 0;
+  }
+
+  .bgImg {
+    padding: 0;
+    margin-bottom: 40px;
+    
+    & .desktop {
+      display: none;
+    }
+
+    & .mobile {
+      display: block;
+      border-radius: 32px;
+      width: 400px;
+      margin: 0 auto;
+    }
+  }
+  .header {
+    width: 100%;
+  }
+
+  .headerInfos {
+
+    padding: 0 25px;
+
+    & h1 {
+      color: var(--Dark-Navy, #242742);
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-family: Roboto;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%; /* 40px */
+    }
+
+    & p {
+      color: var(--Dark-Navy, #242742);
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%; /* 24px */
+    }
+  }
+
+  .infos p {
+    color: var(--Dark-Navy, #242742);
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+  }
+
+  .subscribes {
+    padding: 0 25px;
+    margin-bottom: 40px;
+
+    & h5 {
+      margin-top: 40px;
+    }
+
+    & .inputmail {
+      padding: 16px;
+      width: 100%;
+    }
+
+    & button {
+      padding: 16px 48px
+    }
+  }
+
+  .subscribingPage {
+    width: 390px;
+    margin-top: 149px;
+    margin: 0;
+    padding: 149px 24px 40px 24px;
+
+    & h1 {
+      color: var(--Dark-Navy, #242742);
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-family: Roboto;
+      font-size: 40px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%; /* 40px */
+    }
+
+    & p {
+      color: var(--Dark-Navy, #242742);
+      font-feature-settings: 'clig' off, 'liga' off;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%; /* 24px */
+      margin-bottom: 263px;
+    }
+
+    & button {
+      width: 327px;
+      height: 56px;
+      padding: 0;
+    }
   }
 }
